--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -5,17 +5,17 @@
     padding: 2vmax;
     margin: auto;
     text-align: center;
-    width: 100vw;
     background: linear-gradient(to right, rgb(184, 72, 72), rgb(58, 167, 58), rgb(68, 68, 192));
-    overflow-x: hidden;
+    /* background-color: rgba(211, 206, 206, 0.8); */
 }
 
-form{
-    width: 70vw;
-    background-color: rgb(206, 194, 194);
+.register-form-container{
+    width: 50vw;
+    background-color: white;
     padding: 1vmax;
     margin: auto;
     overflow-x: hidden;
+    border-radius: 30px;
 }
 
 .register-form .form-group{
@@ -23,17 +23,32 @@ form{
 }
 .register-form .form-group input{
     padding: 1vmax;
-    padding-left: 4vmax;
+    padding-left: 5vmax;
     font-size: 1.5vmax;
-    border: none;
     font-weight: 300;
+    border-radius: 20px;
 }
+.register-form .form-group input[type="file"]{
+    margin: 0.5vmax;
+}
+.register-form .form-group input[type="file"]::-webkit-file-upload-button{
+    background-color: dodgerblue;
+    color: white;
+    /* width: 90%; */
+    padding: 1.5vmax;
+    border-radius: 20px;
+    border: none;
+    font: 100 1.2rem "Roboto",sans-serif;
+    overflow: hidden;
+}
+
 .register-form .form-group svg{
     font-size: 3vmax;
     position: absolute;
     padding: 0.5vmax;
     align-items: center;
     font-weight: 300;
+    color: rgb(110, 110, 242);
 }
 
 .register-form [type="submit"]{
@@ -54,6 +69,14 @@ form{
 }
 .register-info a :hover{
     text-decoration: underline;
+}
+.login-form-container{
+    width: 40vw;
+    background-color: white;
+    padding: 1vmax;
+    margin: auto;
+    overflow-x: hidden;
+    border-radius: 30px;
 }
 
 @media screen and (max-width:750px) {
