--- a/frontend/src/components/PostRender/PostCard.css
+++ b/frontend/src/components/PostRender/PostCard.css
@@ -6,9 +6,10 @@
     display: flex;
     background-color: orangered;
     padding: 0.5vmax;
+    text-decoration: none;
 }
 .user-post-header .user-avatar{
-    max-width: 5vmax;
+    max-width: 4vmax;
 }
 
 
@@ -82,4 +83,11 @@ a{
     display: flex;
     flex-wrap: wrap;
     margin: 2vmax;
+}
+
+@media screen and (max-width: 700px) {
+    .user-post-container {
+        max-width: 400px;
+        margin: 2vmax auto;
+    }
 }
