--- a/frontend/src/components/PostRender/PostCard.css
+++ b/frontend/src/components/PostRender/PostCard.css
@@ -1,13 +1,23 @@
+.card-container {
+    transition: all 0.5s ;
+    margin: 1vmax;
+}
+
+.card-container:hover {
+    box-shadow: 0px 0px 2px rgb(104, 100, 100); 
+    transform: translateY(1vmax);
+}
 .user-post-container{
     border: 1px solid black;
     max-width: 40vw;
+    margin: 1vmax;
 }
 .user-post-header{
     display: flex;
     background-color: orangered;
     padding: 0.5vmax;
     text-decoration: none;
-    justify-content: space-around;
+    /* justify-content: space-around; */
 }
 .user-post-header .user-avatar{
     max-width: 4vmax;
@@ -15,7 +25,9 @@
 
 
 .user-post-header .user-avatar img{
-    max-width: 5vmax;
+    width: 4vmax;
+    height: 4vmax;
+    border: 1.5px solid rgb(163, 159, 159);
     border-radius: 50%;
 }
 
@@ -107,6 +119,15 @@ a{
     display: flex;
     flex-wrap: wrap;
     margin: 2vmax;
+}
+.renderAllPost .no-post h4{
+    text-align: center;
+    font-weight: 500;
+    letter-spacing: 0.3cap;
+}
+.renderAllPost .no-post{
+    margin: auto;
+
 }
 
 @media screen and (max-width: 700px) {
