--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -7,7 +7,13 @@
     width: 100vw;
     max-height: 100vh;
 }
-
+.carousel-status{
+    display: none;
+}
+.carousel .control-dots .dot{
+    width: 4px;
+    height: 4px;
+}
 .overlay-navBar svg{
     font-size: 3vmax;
 }
