--- a/frontend/src/components/search/Search.css
+++ b/frontend/src/components/search/Search.css
@@ -1,7 +1,7 @@
 .search{
     background-color: white;
     max-width: 100vw;
-    min-height: 80vh;
+    /* min-height: 80vh; */
 }
 
 .search form {
@@ -21,7 +21,7 @@
     /* background-color: whitesmoke; */
 }
 .search form button{
-    padding: 2vmax;
+    padding: 2.35vmax;
     max-width: 100%;
     font-size: 2vmax;
     border-radius: 0 10px 10px 0;
@@ -30,4 +30,30 @@
 .search form button:hover{
     background-color: rgb(209, 56, 28);
     
+}
+
+.search-results{
+    display: flex;
+    place-content: center;
+    flex-direction: column;
+    place-items: center;
+    justify-content: center;
+    align-items: center;
+}
+.search-results p{
+    border: 1px solid rgb(80, 77, 77);
+    min-width: 40vw;
+    text-align: center;
+    border-radius: 1vmax;
+    padding: 5px;
+    margin: 4px;
+}
+
+
+@media screen and (max-width:750px) {
+    .search{
+        margin: auto;
+        align-items: center;
+        place-items: center;
+    }
 }
